# hidtool

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  TODO.md
.github/workflows/: build-matrix.yml
cmake/: hidtoolConfig.cmake.in
cmake/templates/: config.hpp.in
doc/: README_EN.md  README_ZH.md
example/: CMakeLists.txt
example/echo/: CMakeLists.txt  main.cpp
example/mouse_circle/: CMakeLists.txt  main.cpp
example/simple_clicker/: CMakeLists.txt  main.cpp
example/simple_hid_simulator/: CMakeLists.txt
include/hidtool/: defines.hpp  hid_hooker.hpp  hid_simulator.hpp  hidevent.hpp  hidtool.hpp  hidtype.hpp
include/hidtool/keyboard/: keyboard_event.hpp  keyboard_hooker.hpp  keyboard_key.hpp  keyboard_simulator.hpp
include/hidtool/mouse/: mouse_button.hpp  mouse_event.hpp  mouse_hooker.hpp  mouse_pos.hpp  mouse_simulator.hpp
src/: hid_hooker.cpp  hid_simulator.cpp  hidsim.cpp  hidtype.cpp
src/keyboard/: keyboard_hooker.cpp  keyboard_simulator.cpp
src/keyboard/apple/: keyboard_event_converter.hpp  keyboard_hooker_private.cpp  keyboard_hooker_private.hpp  keyboard_key.cpp  keyboard_simulator_private.cpp  keyboard_simulator_private.hpp
src/keyboard/linux/: input_event_factory.hpp  keyboard_hooker_private.cpp  keyboard_hooker_private.hpp  keyboard_key.cpp  keyboard_simulator_private.cpp  keyboard_simulator_private.hpp  keyboard_uinput.cpp  keyboard_uinput.hpp
src/keyboard/macos/: keyboard_event_converter.hpp  keyboard_hooker_private.cpp  keyboard_hooker_private.hpp  keyboard_key.cpp  keyboard_simulator_private.cpp  keyboard_simulator_private.hpp
src/keyboard/win/: keyboard_event_converter.hpp  keyboard_hooker_private.cpp  keyboard_hooker_private.hpp  keyboard_key.cpp  keyboard_simulator_private.cpp  keyboard_simulator_private.hpp
src/mouse/: mouse_hooker.cpp  mouse_simulator.cpp
src/mouse/apple/: mouse_event_converter.hpp  mouse_hooker_private.cpp  mouse_hooker_private.hpp  mouse_pos.cpp  mouse_simulator_private.cpp  mouse_simulator_private.hpp
src/mouse/linux/: input_event_factory.hpp  mouse_hooker_private.cpp  mouse_hooker_private.hpp  mouse_pos.cpp  mouse_simulator_private.cpp  mouse_simulator_private.hpp  mouse_uinput.cpp  mouse_uinput.hpp
src/mouse/macos/: mouse_event_converter.hpp  mouse_hooker_private.cpp  mouse_hooker_private.hpp  mouse_simulator_private.hpp
src/mouse/win/: input_factory.hpp  mouse_event_converter.hpp  mouse_event_factory.hpp  mouse_hooker_private.cpp  mouse_hooker_private.hpp  mouse_pos.cpp  mouse_simulator_private.cpp  mouse_simulator_private.hpp  virtual_screen_info.cpp  virtual_screen_info.hpp
